<resources>
    <string name="app_name">taobao1</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="myTaoBao">我的淘宝</string>
    <string name="name">账 号</string>
    <string name="pass">密 碼</string>
    <string name="Editname">账号..</string>
    <string name="Editpass">密碼..</string>
    <string name="login">登陆</string>
    <string name="exit">退出</string>
</resources>
